--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: '3'
 
 services:
+  apis:
+    image: gistda/apis
+    ports:
+      - 8080:3000
+    environment:
+      - NODE_ENV=production
+    restart: unless-stopped
+    depends_on:
+      - mongo
+      
   udp:
     image: gistda/gnss-udp-receiver
     ports:
